# SKY-simulator

./: CMakeLists.txt  README.md  build.bat
demo/scripts/: battery_hud.gd  drone_controller.gd  sitl_hud.gd
gdextension/: drone_sim.gdextension
include/aero/: aero_effects.hpp  atmosphere.hpp  blade_element.hpp
include/control/: flight_controller.hpp
include/core/: drone_body.hpp  math_types.hpp
include/sensors/: sensor_suite.hpp
include/sitl/: firmware_bridge.hpp  sitl_manager.hpp  sitl_state.hpp  sitl_state_adapter.hpp  socket_transport.hpp
include/sitl/mavlink/: mavlink_types.hpp
include/sitl/msp/: msp_types.hpp
src/: register_types.cpp
src/core/: drone_body.cpp
src/sitl/: ardupilot_bridge.cpp  betaflight_bridge.cpp  px4_bridge.cpp  sitl_manager.cpp
